Fix alignment of news, change padding to relative units

--- a/styles.css
+++ b/styles.css
@@ -181,7 +181,7 @@ button {
 
 .cards {
     display: grid;
-    padding: 25px;
+    padding: 1rem;
     height: 230px;
     border-left: 7px solid #FFD700;
     border-radius: 4px;
@@ -214,10 +214,13 @@ h4 {
 .projects,
 .announcements,
 .trending {
-    padding: 20px;
+    padding: 2rem 4rem 2rem 3rem;
 }
 
 .news {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #999999;
 }
 
